Added no file exception.

--- a/notebooks/metrics.ipynb
+++ b/notebooks/metrics.ipynb
@@ -2,14 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "id": "9a6c69f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'src'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "Input \u001B[0;32mIn [1]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[0;34m()\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01msrc\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mnpy2pfm\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;241m*\u001B[39m\n\u001B[1;32m      2\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01msrc\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mvisual\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m show\n\u001B[1;32m      3\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mcv2\u001B[39;00m\n",
+      "\u001B[0;31mModuleNotFoundError\u001B[0m: No module named 'src'"
+     ]
+    }
+   ],
    "source": [
     "from src.npy2pfm import *\n",
     "from src.visual import show\n",
-    "import cv2"
+    "import cv2\n"
    ]
   },
   {
@@ -22,12 +34,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m\u001b[36mSampler\u001b[m\u001b[m/              dataset_scaled.zip    \u001b[1m\u001b[36mresults_ganet\u001b[m\u001b[m/\r\n",
-      "\u001b[1m\u001b[36m__pycache__\u001b[m\u001b[m/          \u001b[1m\u001b[36mframes_cleanpass\u001b[m\u001b[m/     \u001b[1m\u001b[36mresults_mobilestereo\u001b[m\u001b[m/\r\n",
-      "\u001b[1m\u001b[36mdata\u001b[m\u001b[m/                 metrics.ipynb         \u001b[1m\u001b[36msrc\u001b[m\u001b[m/\r\n",
-      "\u001b[1m\u001b[36mdataset\u001b[m\u001b[m/              pfmtest.ipynb         \u001b[1m\u001b[36mtestdataset\u001b[m\u001b[m/\r\n",
+      "\u001B[1m\u001B[36mSampler\u001B[m\u001B[m/              dataset_scaled.zip    \u001B[1m\u001B[36mresults_ganet\u001B[m\u001B[m/\r\n",
+      "\u001B[1m\u001B[36m__pycache__\u001B[m\u001B[m/          \u001B[1m\u001B[36mframes_cleanpass\u001B[m\u001B[m/     \u001B[1m\u001B[36mresults_mobilestereo\u001B[m\u001B[m/\r\n",
+      "\u001B[1m\u001B[36mdata\u001B[m\u001B[m/                 metrics.ipynb         \u001B[1m\u001B[36msrc\u001B[m\u001B[m/\r\n",
+      "\u001B[1m\u001B[36mdataset\u001B[m\u001B[m/              pfmtest.ipynb         \u001B[1m\u001B[36mtestdataset\u001B[m\u001B[m/\r\n",
       "dataset.zip           requrements.txt\r\n",
-      "dataset_mobile.zip    \u001b[1m\u001b[36mresult\u001b[m\u001b[m/\r\n"
+      "dataset_mobile.zip    \u001B[1m\u001B[36mresult\u001B[m\u001B[m/\r\n"
      ]
     }
    ],
@@ -272,11 +284,11 @@
      "evalue": "OpenCV(4.5.5) /Users/runner/work/opencv-python/opencv-python/opencv/modules/imgproc/src/color.simd_helpers.hpp:94: error: (-2:Unspecified error) in function 'cv::impl::(anonymous namespace)::CvtHelper<cv::impl::(anonymous namespace)::Set<3, 4, -1>, cv::impl::(anonymous namespace)::Set<1, -1, -1>, cv::impl::(anonymous namespace)::Set<0, 2, 5>, cv::impl::(anonymous namespace)::NONE>::CvtHelper(cv::InputArray, cv::OutputArray, int) [VScn = cv::impl::(anonymous namespace)::Set<3, 4, -1>, VDcn = cv::impl::(anonymous namespace)::Set<1, -1, -1>, VDepth = cv::impl::(anonymous namespace)::Set<0, 2, 5>, sizePolicy = cv::impl::(anonymous namespace)::NONE]'\n> Unsupported depth of input image:\n>     'VDepth::contains(depth)'\n> where\n>     'depth' is 6 (CV_64F)\n",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [105]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m     gt \u001b[38;5;241m=\u001b[39m gt[\u001b[38;5;241m27\u001b[39m:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, :]\n\u001b[1;32m      7\u001b[0m     gt \u001b[38;5;241m=\u001b[39m normalize(gt)\n\u001b[0;32m----> 8\u001b[0m     predicted \u001b[38;5;241m=\u001b[39m \u001b[43mnormalize\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpredicted\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m#     print(predicted, gt)\u001b[39;00m\n\u001b[1;32m     10\u001b[0m     show(predicted, gt)\n",
-      "Input \u001b[0;32mIn [104]\u001b[0m, in \u001b[0;36mnormalize\u001b[0;34m(img)\u001b[0m\n\u001b[1;32m     22\u001b[0m img[\u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m, \u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m=\u001b[39m std[\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m     23\u001b[0m img[\u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m, \u001b[38;5;241m2\u001b[39m] \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m=\u001b[39m std[\u001b[38;5;241m2\u001b[39m]\n\u001b[0;32m---> 24\u001b[0m img \u001b[38;5;241m=\u001b[39m \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcvtColor\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg\u001b[49m\u001b[43m,\u001b[49m\u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mCOLOR_RGB2GRAY\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m img\n",
-      "\u001b[0;31merror\u001b[0m: OpenCV(4.5.5) /Users/runner/work/opencv-python/opencv-python/opencv/modules/imgproc/src/color.simd_helpers.hpp:94: error: (-2:Unspecified error) in function 'cv::impl::(anonymous namespace)::CvtHelper<cv::impl::(anonymous namespace)::Set<3, 4, -1>, cv::impl::(anonymous namespace)::Set<1, -1, -1>, cv::impl::(anonymous namespace)::Set<0, 2, 5>, cv::impl::(anonymous namespace)::NONE>::CvtHelper(cv::InputArray, cv::OutputArray, int) [VScn = cv::impl::(anonymous namespace)::Set<3, 4, -1>, VDcn = cv::impl::(anonymous namespace)::Set<1, -1, -1>, VDepth = cv::impl::(anonymous namespace)::Set<0, 2, 5>, sizePolicy = cv::impl::(anonymous namespace)::NONE]'\n> Unsupported depth of input image:\n>     'VDepth::contains(depth)'\n> where\n>     'depth' is 6 (CV_64F)\n"
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31merror\u001B[0m                                     Traceback (most recent call last)",
+      "Input \u001B[0;32mIn [105]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[0;34m()\u001B[0m\n\u001B[1;32m      6\u001B[0m     gt \u001B[38;5;241m=\u001B[39m gt[\u001B[38;5;241m27\u001B[39m:\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m1\u001B[39m, :]\n\u001B[1;32m      7\u001B[0m     gt \u001B[38;5;241m=\u001B[39m normalize(gt)\n\u001B[0;32m----> 8\u001B[0m     predicted \u001B[38;5;241m=\u001B[39m \u001B[43mnormalize\u001B[49m\u001B[43m(\u001B[49m\u001B[43mpredicted\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m      9\u001B[0m \u001B[38;5;66;03m#     print(predicted, gt)\u001B[39;00m\n\u001B[1;32m     10\u001B[0m     show(predicted, gt)\n",
+      "Input \u001B[0;32mIn [104]\u001B[0m, in \u001B[0;36mnormalize\u001B[0;34m(img)\u001B[0m\n\u001B[1;32m     22\u001B[0m img[\u001B[38;5;241m.\u001B[39m\u001B[38;5;241m.\u001B[39m\u001B[38;5;241m.\u001B[39m, \u001B[38;5;241m1\u001B[39m] \u001B[38;5;241m/\u001B[39m\u001B[38;5;241m=\u001B[39m std[\u001B[38;5;241m1\u001B[39m]\n\u001B[1;32m     23\u001B[0m img[\u001B[38;5;241m.\u001B[39m\u001B[38;5;241m.\u001B[39m\u001B[38;5;241m.\u001B[39m, \u001B[38;5;241m2\u001B[39m] \u001B[38;5;241m/\u001B[39m\u001B[38;5;241m=\u001B[39m std[\u001B[38;5;241m2\u001B[39m]\n\u001B[0;32m---> 24\u001B[0m img \u001B[38;5;241m=\u001B[39m \u001B[43mcv2\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcvtColor\u001B[49m\u001B[43m(\u001B[49m\u001B[43mimg\u001B[49m\u001B[43m,\u001B[49m\u001B[43mcv2\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mCOLOR_RGB2GRAY\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     25\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m img\n",
+      "\u001B[0;31merror\u001B[0m: OpenCV(4.5.5) /Users/runner/work/opencv-python/opencv-python/opencv/modules/imgproc/src/color.simd_helpers.hpp:94: error: (-2:Unspecified error) in function 'cv::impl::(anonymous namespace)::CvtHelper<cv::impl::(anonymous namespace)::Set<3, 4, -1>, cv::impl::(anonymous namespace)::Set<1, -1, -1>, cv::impl::(anonymous namespace)::Set<0, 2, 5>, cv::impl::(anonymous namespace)::NONE>::CvtHelper(cv::InputArray, cv::OutputArray, int) [VScn = cv::impl::(anonymous namespace)::Set<3, 4, -1>, VDcn = cv::impl::(anonymous namespace)::Set<1, -1, -1>, VDepth = cv::impl::(anonymous namespace)::Set<0, 2, 5>, sizePolicy = cv::impl::(anonymous namespace)::NONE]'\n> Unsupported depth of input image:\n>     'VDepth::contains(depth)'\n> where\n>     'depth' is 6 (CV_64F)\n"
      ]
     }
    ],
